Updated gender answers

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -36,7 +36,7 @@ title: COVID-19 Tracking
           </label>
           <label class="radio-item" for="sex-3">
             <input class="input" type="radio" name="sex" id="sex-3" value="other">
-            <span><%= t(:noinformation) %></span>
+            <span><%= t(:other) %></span>
           </label>
         </div>
       </div>
