--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -1,10 +1,10 @@
 ---
-title: Covid-Tracker | Impressum
+title: Covid-Tracker | FAQ
 ---
 
 <%= partial "partials/header" %>
 <div class="container">
   <section class="imprint">
-    <h2>Impressum</h2>
+    <h2>FAQ</h2>
   </section>
 </div>
