--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= current_page.data.title || "COVID-19 Tracking" %></title>
     <%= stylesheet_link_tag "site" %>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/meta/favicon-16x16.png">
+    <link rel="mask-icon" href="/images/meta/safari-pinned-tab.svg" color="#ff0000">
+    <link rel="shortcut icon" href="/images/meta/favicon.ico">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <%= yield %>
