Added share links

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -21,6 +21,8 @@ title: COVID-19 Tracking
 
 <%= partial "partials/partners" %>
 
+<%= partial "partials/social" %>
+
 <div class="form" id="form">
   <div class="container">
     <form action="#" id="covid-form">
