--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,6 +1,7 @@
 <footer class="footer">
   <div class="container">
     <ul class="footer__nav">
+      <li><%= link_to 'FAQ', '/faq.html' %></li>
       <li><%= link_to 'Impressum', '/imprint.html' %></li>
     </ul>
   </div>
