--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,10 @@
     <link rel="shortcut icon" href="/images/meta/favicon.ico">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:image" content="http://cv01.dil.uno/images/meta/ogimage.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
   <body>
     <%= yield %>
