--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,6 +23,9 @@
     <%= yield %>
     
     <%= partial "partials/footer" %>
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=Array.of%2Cdocument.querySelector"></script>
+    <%= javascript_include_tag "date-input-polyfill" %>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
