Added required indicators

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -44,11 +44,11 @@ title: COVID-19 Tracking
         </div>
       </div>
       <div class="input-wrap input-wrap--text">
-        <label class="label" for="age"><%= t(:age) %></label>
+        <label class="label" for="age"><%= t(:age) %> *</label>
         <input id="age" name="age" class="input input--short" type="number" max="120" min="0" step="1" required>
       </div>
       <div class="input-wrap input-wrap--text">
-        <label class="label" for="zip"><%= t(:zip) %></label>
+        <label class="label" for="zip"><%= t(:zip) %> *</label>
         <input id="zip" name="zip" class="input input--short" type="number" max="9999" min="1000" step="1" required>
       </div>
       <div class="input-wrap input-wrap--text">
