--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -25,7 +25,7 @@ title: COVID-19 Tracking
 
 <div class="form" id="form">
   <div class="container">
-    <form action="https://covid.apps-customer.210235761750.ninegcp.ch/form" id="covid-form">
+    <form action="https://covid.apps-customer.210235761750.ninegcp.ch/form" data-url="https://covid.apps-customer.210235761750.ninegcp.ch/form" method="post" id="covid-form">
       <div class="input-wrap input-wrap--radio">
         <span class="label"><%= t(:sex) %></span>
         <div class="radio-wrap">
