--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -44,8 +44,8 @@ title: COVID-19 Tracking
         </div>
       </div>
       <div class="input-wrap input-wrap--text">
-        <label class="label" for="birthyear"><%= t(:birthyear) %> *</label>
-        <input id="birthyear" name="birthyear" class="input input--short" type="number" max="2020" min="1900" step="1" required>
+        <label class="label" for="yearOfBirth"><%= t(:birthyear) %> *</label>
+        <input id="yearOfBirth" name="yearOfBirth" class="input input--short" type="number" max="2020" min="1900" step="1" required>
       </div>
       <div class="input-wrap input-wrap--text">
         <label class="label" for="zip"><%= t(:zip) %> *</label>
