Added Kanton Bern

--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -10,6 +10,7 @@ title: Covid-Tracker | Impressum
       <ul>
         <li><a target="_blank" href="https://www.eth.ch"><img src="images/partner/logo-eth.png" alt="ETH Zürich"></a></li>
         <li><a target="_blank" href="https://www.inselspital.ch"><img src="images/partner/logo-inselspital.png" alt="Inselspital Bern"></a></li>
+        <li><a target="_blank" href="https://www.be.ch"><img src="images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></a></li>
       </ul>
     </div>
     <h2>Umsetzung</h2>
