--- a/source/partials/_partners.erb
+++ b/source/partials/_partners.erb
@@ -1,6 +1,7 @@
 <section class="partners">
   <div class="partners-wrap">
-    <div class="partner"><img src="/images/logo-eth.png" alt="ETH Zürich"></div>
-    <div class="partner"><img src="/images/logo-inselspital.png" alt="Inselspital Bern"></div>
+    <div class="partner"><img src="/images/partner/logo-eth.png" alt="ETH Zürich"></div>
+    <div class="partner"><img src="/images/partner/logo-inselspital.png" alt="Inselspital Bern"></div>
+    <div class="partner"><img src="/images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></div>
   </div>
 </section>
