--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -4,7 +4,7 @@ title: Thank You
 
 <%= partial "partials/header" %>
 <div class="container">
-  <section class="imprint">
+  <section class="subpage">
     <h2>Vielen Dank</h2>
     <p>Vielen Dank, dass Sie diese Fragen ausgefüllt haben: Dies wird im Kampf gegen die Epidemie von grossem Nutzen sein.</p>
     <p>Sie können den Fragebogen gerne erneut ausfüllen, wenn:
