--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -19,6 +19,7 @@ title: Covid-Tracker | Impressum
         <li><a target="_blank" href="https://www.diluno.com"><img src="images/partner/logo-diluno.png" alt="Diluno GmbH"></a></li>
         <li><a target="_blank" href="https://www.astina.ch"><img src="images/partner/logo-astina.png" alt="Astina AG"></a></li>
         <li><a target="_blank" href="https://www.nine.ch"><img src="images/partner/logo-nine.png" alt="Nine Internet Solutions AG"></a></li>
+        <li><a target="_blank" href="https://www.texetera.ch"><img src="images/partner/logo-texetera.png" alt="Texetera GmbH"></a></li>
       </ul>
     </div>
     <h2>Impressum</h2>
