--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -229,6 +229,7 @@ p {
   background-color: $c-highlight;
   color: #fff;
   padding: .5rem 0;
+  box-shadow: 0 2px 80px 0 rgba(#f00, .2);
 
   h1 {
     font-size: 1.5rem;
