--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,4 @@
-$f-main: "Helvetica Neue", Helvetica, sans-serif;
+$f-main: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $c-highlight: #e53e3e;
 
 @mixin mobile() {
