--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -13,7 +13,7 @@ title: COVID-Tracker
       <img class="hero__logo" src="/images/covid-icon.png" alt="COVID-19">
       <h1 class="hero__headline"><%= t(:title) %></h1>
       <%= t(:introduction) %>
-      <%= link_to 'Mehr erfahren', '/faq.html' %><br>
+      <p><%= link_to 'Mehr erfahren', '/faq.html' %></p>
       <a href="#form" class="btn btn--inv"><%= t(:toform) %></a>
     </div>
   </div>
