Social buttons on response page

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -19,9 +19,13 @@ title: COVID-Tracker
   </div>
 </div>
 
-<%= partial "partials/partners" %>
+<section class="home-section" id="partners">
+  <%= partial "partials/partners" %>
+</section>
 
-<%= partial "partials/social" %>
+<section class="home-section" id="sharing">
+  <%= partial "partials/social" %>
+</section>
 
 <div class="form" id="form">
   <div class="container">
