--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -15,6 +15,8 @@ title: Thank You
       </ul>
     </p>
     <p>Dieser Corona-Tracker wird nur dann nützlich sein, wenn eine sehr große Anzahl von Personen ihn ausfüllt und uns die Informationen zur Verfügung stellt. DANKE, für die weitmöglichste Verbreitung in Ihrem Umfeld!</p>
- 
+    <div class="response-share">
+      <%= partial "partials/social" %>
+    </div>
   </section>
 </div>
