--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -131,15 +131,6 @@ p {
   padding: 2rem 0 6rem 0;
 }
 
-/*#form-expanded {
-  display: none;
-
-  &.visible {
-    display: block;
-  }
-}
-*/
-
 .input-wrap {
   margin: 2.5rem 0;
 
@@ -257,12 +248,9 @@ section.subpage {
   }
 }
 
-section.partners, section.social {
+.home-section {
   padding: 2rem 1rem 2rem 1rem;
   border-bottom: 1px solid #ddd;
-}
-section.social {
-  // padding: 1rem 1rem 1rem 1rem;
 }
 .partners-wrap, .social-wrap {
   max-width: 900px;
@@ -287,7 +275,7 @@ section.social {
   }
 }
 
-.social {
+.social-wrap {
   ul {
     list-style-type: none;
     margin: 0;
@@ -361,6 +349,10 @@ section.social {
       }
     }
   }
+}
+
+.response-share {
+  margin-top: 4rem;
 }
 
 .hidden {
