--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= current_page.data.title || "COVID-19 Tracking" %></title>
+    <title>COVID-Tracker</title>
     <%= stylesheet_link_tag "site" %>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
@@ -25,7 +25,7 @@
     <%= partial "partials/footer" %>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=Array.of%2Cdocument.querySelector"></script>
-    <%= javascript_include_tag "date-input-polyfill" %>
+    <%= javascript_include_tag "date-input-polyfill.min" %>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
