--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -4,18 +4,18 @@
     <h2>Partner</h2>
     <div class="partner-grid">
       <ul>
-        <li><a target="_blank" href="https://www.eth.ch"><img src="images/partner/logo-eth.png" alt="ETH Zürich"></a></li>
-        <li><a target="_blank" href="https://www.be.ch"><img src="images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></a></li>
+        <li><a target="_blank" href="https://www.eth.ch"><img src="/images/partner/logo-eth.png" alt="ETH Zürich"></a></li>
+        <li><a target="_blank" href="https://www.be.ch"><img src="/images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></a></li>
       </ul>
     </div>
     <h2>Umsetzung</h2>
     <div class="partner-grid">
       <ul>
-        <li><a target="_blank" href="https://www.milliwayszurich.ch"><img src="images/partner/logo-milliways.png" alt="Milliways GmbH"></a></li>
-        <li><a target="_blank" href="https://www.diluno.com"><img src="images/partner/logo-diluno.png" alt="Diluno GmbH"></a></li>
-        <li><a target="_blank" href="https://www.astina.ch"><img src="images/partner/logo-astina.png" alt="Astina AG"></a></li>
-        <li><a target="_blank" href="https://www.nine.ch"><img src="images/partner/logo-nine.png" alt="Nine Internet Solutions AG"></a></li>
-        <li><a target="_blank" href="https://www.texetera.ch"><img src="images/partner/logo-texetera.png" alt="Texetera GmbH"></a></li>
+        <li><a target="_blank" href="https://www.milliwayszurich.ch"><img src="/images/partner/logo-milliways.png" alt="Milliways GmbH"></a></li>
+        <li><a target="_blank" href="https://www.diluno.com"><img src="/images/partner/logo-diluno.png" alt="Diluno GmbH"></a></li>
+        <li><a target="_blank" href="https://www.astina.ch"><img src="/images/partner/logo-astina.png" alt="Astina AG"></a></li>
+        <li><a target="_blank" href="https://www.nine.ch"><img src="/images/partner/logo-nine.png" alt="Nine Internet Solutions AG"></a></li>
+        <li><a target="_blank" href="https://www.texetera.ch"><img src="/images/partner/logo-texetera.png" alt="Texetera GmbH"></a></li>
       </ul>
     </div>
     <h2>Impressum</h2>
