--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
-  <body>
+  <body data-lang="<%= I18n.locale %>">
     <%= yield %>
     
     <%= partial "partials/footer" %>
