Added triboni logo

--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -1,14 +1,14 @@
 <%= partial "partials/header" %>
 <div class="container">
   <section class="subpage">
-    <h2>Partner</h2>
+    <h2><%= t(:partners) %></h2>
     <div class="partner-grid">
       <ul>
         <li><a target="_blank" href="https://www.eth.ch"><img src="/images/partner/logo-eth.png" alt="ETH Zürich"></a></li>
         <li><a target="_blank" href="https://www.be.ch"><img src="/images/partner/logo-bern.png" alt="Gesundheitsdirektion des Kantons Bern"></a></li>
       </ul>
     </div>
-    <h2>Umsetzung</h2>
+    <h2><%= t(:implementation) %></h2>
     <div class="partner-grid">
       <ul>
         <li><a target="_blank" href="https://www.milliwayszurich.ch"><img src="/images/partner/logo-milliways.png" alt="Milliways GmbH"></a></li>
@@ -16,8 +16,9 @@
         <li><a target="_blank" href="https://www.astina.ch"><img src="/images/partner/logo-astina.png" alt="Astina AG"></a></li>
         <li><a target="_blank" href="https://www.nine.ch"><img src="/images/partner/logo-nine.png" alt="Nine Internet Solutions AG"></a></li>
         <li><a target="_blank" href="https://www.texetera.ch"><img src="/images/partner/logo-texetera.png" alt="Texetera GmbH"></a></li>
+        <li><a target="_blank" href="https://www.triboni.ch"><img src="/images/partner/logo-triboni.png" alt="Triboni AG"></a></li>
       </ul>
     </div>
-    <h2>Impressum</h2>
+    <h2><%= t(:imprint) %></h2>
   </section>
 </div>
