--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container">
     <img class="header__logo" src="/images/covid-icon.png" alt="COVID-19">
-    <h1><%= link_to 'COVID-19 Tracker', '/index.html' %></h1>
+    <h1><%= link_to t(:title), '/index.html' %></h1>
   </div>
 </header>
