--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -229,6 +229,10 @@ p {
     a {
       text-decoration: none;
     }
+    @include mobile {
+      font-size: 1rem;
+      padding-left: 3rem;
+    }
   }
   &__logo {
     position: absolute;
@@ -237,6 +241,13 @@ p {
     width: auto;
     height: 3rem;
     transform: translateY(-50%);
+
+    @include mobile {
+      height: 2rem;
+    }
+  }
+  @include mobile {
+    box-shadow: 0 2px 50px 0 rgba(#f00, .2);
   }
 }
 
