--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -1,4 +1,5 @@
 <%= partial "partials/header" %>
+<%= partial "partials/homelink" %>
 <div class="container">
   <section class="subpage">
     <h2><%= t(:partners) %></h2>
