--- a/source/localizable/faq.it.html.erb
+++ b/source/localizable/faq.it.html.erb
@@ -1,4 +1,5 @@
 <%= partial "partials/header" %>
+<%= partial "partials/homelink" %>
 <div class="container">
   <section class="subpage">
     <h2>FAQ</h2>
