--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -387,6 +387,16 @@ section.subpage {
   margin-top: 4rem;
 }
 
+.message {
+  padding: 1rem;
+  font-size: .8rem;
+  text-align: center;
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: .05rem;
+}
+
 .hidden {
   display: none;
 }
