--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -81,7 +81,7 @@
         </div>
         <div class="input-wrap input-wrap--text input-wrap--child">
           <label class="label" for="whereTested"><%= t(:whereTested) %></label>
-          <input id="whereTested" name="whereTested" class="input" type="text">
+          <input id="whereTested" name="whereTested" class="input" type="text" maxlength="30">
         </div>
       </div>
       <div class="input-wrap input-wrap--radio">
@@ -171,7 +171,7 @@
             <span><%= t(:lung) %></span>
           </label>
           <label class="radio-item" for="chronicConditionType-3">
-            <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-3" value="dabetes">
+            <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-3" value="diabetes">
             <span><%= t(:diabetes) %></span>
           </label>
           <label class="radio-item" for="chronicConditionType-4">
