--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -21,5 +21,9 @@
       </ul>
     </div>
     <h2><%= t(:imprint) %></h2>
+    <p><b>Allgemeine Informationen</b><br><a href="mailto:info@covidtracker.ch">info@covidtracker.ch</a></p>
+    <p><b>Presse</b><br><a href="mailto:info@covidtracker.ch">press@covidtracker.ch</a></p>
+    <p><b>Technik</b><br><a href="mailto:info@covidtracker.ch">tech@covidtracker.ch</a></p>
+    <p>Milliways GmbH<br>Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
   </section>
 </div>
