--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -12,7 +12,7 @@
       <li><a href="/it" data-lang="it" class="js-setLang langlink ml-4">Italiano</a></li>
     </ul>
     <div>
-      <img class="hero__logo" src="/images/covid-icon.png" alt="COVID-19">
+      <%= partial "partials/icon" %>
       <h1 class="hero__headline"><%= t(:title) %></h1>
       <%= t(:introduction) %>
       <p><%= link_to t(:seemore), '/faq.html' %></p>
