--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container">
-    <% link_to '/index.html' do %><img class="header__logo" src="/images/covid-icon.png" alt="COVID-19"><% end %>
+    <% link_to '/index.html' do %><%= partial "partials/icon" %><% end %>
     <h1><%= link_to t(:title), '/index.html' %></h1>
   </div>
 </header>
