--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -94,7 +94,7 @@ p {
   &__headline {
     text-shadow: 0 2px 2px rgba(#000, .2);
   }
-  &__logo {
+  .logo {
     display: block;
     width: 6rem;
     height: auto;
@@ -237,7 +237,7 @@ p {
       padding-left: 3rem;
     }
   }
-  &__logo {
+  .logo {
     position: absolute;
     top: 50%;
     left: 1rem;
