--- a/source/localizable/faq.fr.html.erb
+++ b/source/localizable/faq.fr.html.erb
@@ -2,16 +2,16 @@
 <%= partial "partials/homelink" %>
 <div class="container">
   <section class="subpage">
-    <h2>FAQ FR</h2>
-    <h3 class="faq__question">Wer steht hinter diesem Projekt?</h3>
-    <p>Der Covid-19-Tracker wurde von mehreren unabhängigen Forschern und Software-Entwicklern in Zusammenarbeit mit der Taskforce Covid-19 der ETH Zürich und dem Inselspital Bern realisiert.</p>
-    <h3 class="faq__question">Was ist das Ziel der Kampagne?</h3>
-    <p>Ziel des Covid-19-Trackers ist es, in kurzer Zeit möglichst viele Daten von gesunden und infizierten Personen in der Schweiz zusammentragen. Diese Daten sollen unter anderem dazu dienen, ein differenziertes Bild der Corona-Situation zu erhalten.</p>
-    <h3 class="faq__question">Wie hilft das Sammeln der Daten bei der Bekämpfung der Corona-Krise?</h3>
-    <p>Die Informationen zur Corona-Situation in der Schweiz sind schwer zu koordinieren und schwer zusammenzutragen. Flächendeckende Tests sind keine Option. Jedes zusätzliche Stück Information kann daher helfen, die Ausbreitung des Virus zu stoppen.<br>Die mittels Covid-19-Tracker gesammelten Daten enthalten die Postleitzahl sowie eine Selbsteinschätzung der antwortenden Personen. Regionen, in denen besonders viele potenzielle Krankheitsfälle vorkommen, können so erkannt werden. Dies ermöglicht gezielte Massnahmen seitens der Behörden.</p>
-    <h3 class="faq__question">Ist die Kampagne wissenschaftlich abgestützt?</h3>
-    <p>Die Kampagne wurde in Zusammenarbeit mit der Taskforce Covid-19 der ETH Zürich und dem Inselspital Bern entwickelt. Beide Institutionen bestätigen das dringende Bedürfnis nach möglichst umfassenden Informationen aus der Bevölkerung, um die Epidemie zu bekämpfen. Wissenschaftliche Untersuchungen (u.a. von Dr. Jan von Overbeck) stützen ein Vorgehen, wie es mit dem Covid-19-Tracker nun umgesetzt wird.</p>
-    <h3 class="faq__question">Was geschieht mit meinen Daten?</h3>
-    <p>Die Daten, die mittels Covid-19-Tracker gesammelt werden, erlauben keine Rückschlüsse auf Personen. Sie enthalten Postleitzahl, Alter, Geschlecht und einige weitere Informationen, jedoch weder Namen, noch sonstige personenbezogenen Daten. Die letzten vier Ziffern der Telefonnummer werden erhoben, um Missbrauch zu verhindern.<br>Die Daten werden auf Schweizer Servern gehostet.</p>
+    <h2>FAQ</h2>
+    <h3 class="faq__question">Qui est derrière ce projet?</h3>
+    <p>Le Covid-19-Tracker est réalisé par différents chercheurs et développeurs de logiciels, en collaboration avec la taskforce Covid-19 de l’Ecole polytechnique fédérale de Zurich (EPFZ), l’Hôpital de l’Île à Berne et la Direction de la santé publique du canton de Berne.</p>
+    <h3 class="faq__question">Quel est le but de cette campagne?</h3>
+    <p>L’objectif du Covid-19-Tracker est de récolter, dans les plus brefs délais, un maximum de données de personnes saines et infectées en Suisse. Ces données doivent notamment permettre d’obtenir une image différenciée de la situation en lien avec le nouveau coronavirus.</p>
+    <h3 class="faq__question">En quoi la récolte des données peut-elle être utile dans la lutte contre le coronavirus?</h3>
+    <p>Les informations sur la situation en lien avec le coronavirus en Suisse sont difficiles à coordonner et à rassembler. Les tests généralisés ne sont pas envisageables. Par conséquent, chaque élément d’information supplémentaire peut contribuer à arrêter la propagation du virus.<br>Les données recueillies par le biais du Covid-19-Tracker comprennent le code postal ainsi qu’une auto-évaluation de la personne répondant au questionnaire. Les régions présentant un nombre de cas de maladie potentiellement élevé pourront ainsi être identifiées. Les autorités auront la possibilité de prendre des mesures ciblées et locales.</p>
+    <h3 class="faq__question">Cette campagne a-t-elle un caractère scientifique?</h3>
+    <p>Cette campagne est développée en collaboration avec la taskforce Covid-19 de l’EPFZ et l’Hôpital de l’Île à Berne. Ces deux institutions confirment le besoin urgent d’informations les plus complètes possibles de la part de la population pour combattre l’épidémie. Des études scientifiques (dont celles du Dr. Jan von Overbeck) étayent l’approche actuellement mise en œuvre avec le Covid-19-Tracker.</p>
+    <h3 class="faq__question">Qu’advient-il de mes données?</h3>
+    <p>Les données récoltées au moyen du Covid-19-Tracker ne peuvent pas être associées à des personnes. Ces données comprennent le code postal, l’âge, le genre et quelques informations complémentaires, mais aucun nom ni donnée à caractère personnel. Les quatre derniers chiffres du numéro de téléphone sont requis pour éviter un usage abusif.<br>Les données seront hébergées sur des serveurs suisses.</p>
   </section>
 </div>
