--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,8 @@
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:description" content="Covid-Tracker" />
+    <meta name="description" content="<%= t(:description) %>">
+    <meta property="og:description" content="<%= t(:description) %>" />
     <meta property="og:image" content="https://www.covidtracker.ch/images/meta/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
