--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,6 @@
 $f-main: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $c-highlight: #e53e3e;
+$c-highlight-dark: #da3838;
 
 @mixin mobile() {
   @media screen and (max-width: 640px) {
@@ -51,7 +52,7 @@ p {
   padding: .75rem 2rem;
   border: none;
   border-radius: 4px;
-  background-color: $c-highlight;
+  background-color: $c-highlight-dark;
   color: #fff;
   font-size: 1rem;
   text-decoration: none;
@@ -65,7 +66,7 @@ p {
   }
   &--inv {
     background-color: #fff;
-    color: $c-highlight;
+    color: $c-highlight-dark;
 
     &:hover {
       background-color: #fee;
