--- a/source/partials/_social.erb
+++ b/source/partials/_social.erb
@@ -1,6 +1,6 @@
 <div class="social-wrap">
   <ul>
-    <li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.covidtracker.ch" class="social-btn social-btn--fb"><%= t(:shareon) %> Facebook</a></li>
+    <li><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.covidtracker.ch" rel="noreferrer" class="social-btn social-btn--fb"><%= t(:shareon) %> Facebook</a></li>
     <li><a target="_blank" href="https://twitter.com/home?status=https://www.covidtracker.ch" rel="noreferrer" class="social-btn social-btn--twitter"><%= t(:shareon) %> Twitter</a></li>
     <li><a target="_blank" href="mailto:?&subject=&body=https://www.covidtracker.ch" rel="noreferrer" class="social-btn social-btn--mail"><%= t(:shareby) %> E-Mail</a></li>
   </ul>
