Removed mentions of Inselspital

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -4,13 +4,13 @@
   <section class="subpage">
     <h2>FAQ</h2>
     <h3 class="faq__question">Wer steht hinter diesem Projekt?</h3>
-    <p>Der Covid-19-Tracker wurde von mehreren unabhängigen Forschern und Software-Entwicklern in Zusammenarbeit mit der Taskforce Covid-19 der ETH Zürich und dem Inselspital Bern realisiert.</p>
+    <p>Der Covid-19-Tracker wurde von mehreren unabhängigen Forschern und Software-Entwicklern im Austausch mit der Taskforce Covid-19 der ETH Zürich und der Gesundheitsdirektion des Kantons Bern realisiert.</p>
     <h3 class="faq__question">Was ist das Ziel der Kampagne?</h3>
     <p>Ziel des Covid-19-Trackers ist es, in kurzer Zeit möglichst viele Daten von gesunden und infizierten Personen in der Schweiz zusammentragen. Diese Daten sollen unter anderem dazu dienen, ein differenziertes Bild der Corona-Situation zu erhalten.</p>
     <h3 class="faq__question">Wie hilft das Sammeln der Daten bei der Bekämpfung der Corona-Krise?</h3>
     <p>Die Informationen zur Corona-Situation in der Schweiz sind schwer zu koordinieren und schwer zusammenzutragen. Flächendeckende Tests sind keine Option. Jedes zusätzliche Stück Information kann daher helfen, die Ausbreitung des Virus zu stoppen.<br>Die mittels Covid-19-Tracker gesammelten Daten enthalten die Postleitzahl sowie eine Selbsteinschätzung der antwortenden Personen. Regionen, in denen besonders viele potenzielle Krankheitsfälle vorkommen, können so erkannt werden. Dies ermöglicht gezielte Massnahmen seitens der Behörden.</p>
     <h3 class="faq__question">Ist die Kampagne wissenschaftlich abgestützt?</h3>
-    <p>Die Kampagne wurde in Zusammenarbeit mit der Taskforce Covid-19 der ETH Zürich und dem Inselspital Bern entwickelt. Beide Institutionen bestätigen das dringende Bedürfnis nach möglichst umfassenden Informationen aus der Bevölkerung, um die Epidemie zu bekämpfen. Wissenschaftliche Untersuchungen (u.a. von Dr. Jan von Overbeck) stützen ein Vorgehen, wie es mit dem Covid-19-Tracker nun umgesetzt wird.</p>
+    <p>Die Kampagne wurde im Austausch mit der Taskforce Covid-19 der ETH Zürich und der Gesundheitsdirektion des Kantons Bern entwickelt. Beide Institutionen bestätigen das dringende Bedürfnis nach möglichst umfassenden Informationen aus der Bevölkerung, um die Epidemie zu bekämpfen. Wissenschaftliche Untersuchungen (u.a. von Dr. Jan von Overbeck) stützen ein Vorgehen, wie es mit dem Covid-19-Tracker nun umgesetzt wird.</p>
     <h3 class="faq__question">Was geschieht mit meinen Daten?</h3>
     <p>Die Daten, die mittels Covid-19-Tracker gesammelt werden, erlauben keine Rückschlüsse auf Personen. Sie enthalten Postleitzahl, Alter, Geschlecht und einige weitere Informationen, jedoch weder Namen, noch sonstige personenbezogenen Daten. Die letzten vier Ziffern der Telefonnummer werden erhoben, um Missbrauch zu verhindern.<br>Die Daten werden auf Schweizer Servern gehostet.</p>
   </section>
