--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,13 +17,13 @@
 
     <meta name="description" content="<%= t(:description) %>">
     <meta property="og:title" content="<%= t(:title) %>" />
-    <meta property="og:url" content="https://www.covidtracker.ch" />
+    <meta property="og:url" content="https://www.covidtracker.ch<%= current_page.url %>" />
     <meta property="og:description" content="<%= t(:description) %>" />
     <meta property="og:image" content="https://www.covidtracker.ch/images/meta/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
-  <body data-lang="<%= I18n.locale %>">
+  <body data-lang="<%= I18n.locale %>">  
     <%= yield %>
     
     <%= partial "partials/footer" %>
