--- a/source/localizable/imprint.html.erb
+++ b/source/localizable/imprint.html.erb
@@ -24,6 +24,6 @@
     <p><b><%= t(:press) %></b><br><a href="mailto:info@covidtracker.ch">press@covidtracker.ch</a></p>
     <p><b><%= t(:technology) %></b><br><a href="mailto:info@covidtracker.ch">tech@covidtracker.ch</a></p>
     <br>
-    <p>Milliways GmbH<br>Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
+    <p>Milliways GmbH<br>Tizian & Luca Naterop<br>Bauhallengasse 5<br>8004 Zürich</p>
   </section>
 </div>
