Fixes for share tags

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,9 @@
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
 
+    <meta name=”twitter:card” content=”summary” />
     <meta name="description" content="<%= t(:description) %>">
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= t(:title) %>" />
     <meta property="og:url" content="https://www.covidtracker.ch<%= current_page.url %>" />
     <meta property="og:description" content="<%= t(:description) %>" />
