Removed eth mention in german faq

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -31,7 +31,7 @@
 
 <div class="form" id="form">
   <div class="container">
-    <form action="https://covid.apps-customer.210235761750.ninegcp.ch/form" data-url="https://covid.apps-customer.210235761750.ninegcp.ch/form" method="post" id="covid-form">
+    <form action="https://covid.apps-customer.210235761750.ninegcp.ch/form" method="post" id="covid-form">
       <div class="input-wrap input-wrap--radio">
         <span class="label"><%= t(:sex) %> *</span>
         <div class="radio-wrap">
