Added supported by-title

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -22,6 +22,7 @@
 </div>
 
 <section class="home-section" id="partners">
+  <h2><%= t(:supportedBy) %>:</h2>
   <%= partial "partials/partners" %>
 </section>
 
