--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -271,6 +271,14 @@ section.subpage {
 .home-section {
   padding: 2rem 1rem 2rem 1rem;
   border-bottom: 1px solid #ddd;
+
+  h2 {
+    font-size: .75rem;
+    margin: 0 auto;
+    margin-bottom: .5rem;
+    text-align: center;
+    font-weight: normal;
+  }
 }
 .partners-wrap, .social-wrap {
   max-width: 900px;
