Added required marker for a field

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -59,7 +59,7 @@
         <input id="zip" name="zip" class="input input--short" type="number" max="9999" min="1000" step="1" required>
       </div>
       <div class="input-wrap input-wrap--text">
-        <label class="label" for="phoneDigits"><%= t(:phoneDigits) %></label>
+        <label class="label" for="phoneDigits"><%= t(:phoneDigits) %> *</label>
         <input id="phoneDigits" name="phoneDigits" class="input input--short" type="number" step="1" min="0" max="9999" required>
       </div>
       <div class="input-wrap input-wrap--radio">
