--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -61,6 +61,7 @@
       <div class="input-wrap input-wrap--text">
         <label class="label" for="phoneDigits"><%= t(:phoneDigits) %> *</label>
         <input id="phoneDigits" name="phoneDigits" class="input input--short" type="number" step="1" min="0" max="9999" required>
+        <span class="input-wrap__info"><%= t(:phoneInfo) %></span>
       </div>
       <div class="input-wrap input-wrap--radio">
         <span class="label"><%= t(:hasBeenTested) %></span>
