Updated german FAQ

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -378,6 +378,7 @@ section.subpage {
 
 .faq__question {
   font-size: 1rem;
+  line-height: 1.4;
   margin-top: 2rem;
   border-bottom: 2px solid #ddd;
   padding-bottom: 4px;
