--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -58,11 +58,6 @@
         <label class="label" for="zip"><%= t(:zip) %> *</label>
         <input id="zip" name="zip" class="input input--short" type="number" max="9999" min="1000" step="1" required>
       </div>
-      <div class="input-wrap input-wrap--text">
-        <label class="label" for="phoneDigits"><%= t(:phoneDigits) %> *</label>
-        <input id="phoneDigits" name="phoneDigits" class="input input--short" type="number" step="1" min="0" max="9999" required>
-        <span class="input-wrap__info"><%= t(:phoneInfo) %></span>
-      </div>
       <div class="input-wrap input-wrap--radio">
         <span class="label"><%= t(:hasBeenTested) %></span>
         <div class="radio-wrap">
@@ -283,6 +278,7 @@
           <input id="throatSince" name="throatSince" class="input input--short" type="number">
         </div>
       </div>
+      <input type="hidden" name="phoneDigits" value="0000">
       <button type="submit" class="btn" id="btn-send"><%= t(:sendForm) %></button>
     </form>
   </div>
