--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -16,6 +16,7 @@
       <h1 class="hero__headline"><%= t(:title) %></h1>
       <%= t(:introduction) %>
       <p><%= link_to t(:seemore), '/faq.html' %></p>
+      <p><a target="_blank" rel="noreferrer" href="https://www.be.ch/portal/de/index/mediencenter/medienmitteilungen.meldungNeu.html/portal/de/meldungen/mm/2020/03/20200326_1115_gruppe_von_jungenforschernstartetlandesweitgeografischedatensamm"><%= t(:pressRelease) %></a></p>
       <a href="#form" class="btn btn--inv"><%= t(:toform) %></a>
     </div>
   </div>
