--- a/source/localizable/response.html.erb
+++ b/source/localizable/response.html.erb
@@ -4,13 +4,12 @@
   <section class="subpage">
     <h2>Danke!</h2>
     <p>Vielen Dank, dass Sie diese Fragen beantwortet haben. Gemeinsam sind wir stärker.</p>
-    <p>Bitte füllen Sie diesen Fragebogen unbedingt erneut aus, wenn:
-      <ul>
-        <li>Eines der genannten Symptome auftritt</li>
-        <li>Sie positiv auf Covid-19 getestet werden</li>
-        <li>Sie unter Quarantäne stehen</li>
-      </ul>
-    </p>
+    <p>Bitte füllen Sie diesen Fragebogen unbedingt erneut aus, wenn:</p>
+    <ul class="list">
+      <li>Eines der genannten Symptome auftritt</li>
+      <li>Sie positiv auf Covid-19 getestet werden</li>
+      <li>Sie unter Quarantäne stehen</li>
+    </ul>
     <p>Dieser Corona-Tracker wird nur dann nützlich sein, wenn eine grosse Anzahl von Personen ihn ausfüllt. Bitte verbreiten Sie ihn so weit wie möglich in Ihrem Umfeld. Helfen Sie älteren Menschen, ihn auszufüllen. Und bleiben Sie gesund!</p>
     <div class="response-share">
       <%= partial "partials/social" %>
