--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -4,6 +4,7 @@
       <li><%= link_to 'Map', '/map.html' %></li>
       <li><%= link_to 'FAQ', '/faq.html' %></li>
       <li><%= link_to t(:imprint), '/imprint.html' %></li>
+      <li><%= link_to t(:dataProtection), '/dataprotection.html' %></li>
     </ul>
   </div>
 </footer>
